Перенос данных для вывода записей

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 	  </div><!-- container-fluid -->
 </body>
 <script src="script.js"></script>
+<script src="js/posts.js"></script>
+<script src="js/post.js"></script>
 <script src="js/categories.js"></script>
 <script src="js/settings.js"></script>
 <script src="js/module.js"></script>
